[package]
name = "rdf_config"
version = "0.1.118"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
documentation = "https://docs.rs/rdf_config"
homepage.workspace = true
repository.workspace = true

[dependencies]
hashlink = { version = "0.10" }
indexmap = { version = "2" }
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml = "0.8"
tracing = { workspace = true }
yaml-rust2 = { version = "0.10" }

[dev-dependencies]
indoc = "2"
