[package]
name = "rdf_config"
version = "0.1.127"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
documentation = "https://docs.rs/rdf_config"
homepage.workspace = true
repository.workspace = true

[dependencies]
hashlink.workspace = true
indexmap.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true 
yaml-rust2.workspace = true

[dev-dependencies]
indoc.workspace = true
