[package]
name = "rdfsx_cli"
version = "0.1.6"
authors.workspace = true
description.workspace = true
documentation = "https://www.weso.es/shapes-rs/"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
shex_ast = { path = "../shex_ast", version = "0.1.0" }
shex_validation = { path = "../shex_validation", version = "0.1.0" }
srdf = { path = "../srdf", version = "0.1.0", features = ["rdf-star"] }
prefixmap = { path = "../prefixmap", version = "0.1.0" }
iri_s = { path = "../iri_s", version = "0.1.5" }
shapemap = { path = "../shapemap", version = "0.1.0" }
shex_compact = { path = "../shex_compact", version = "0.1.0" }
shacl_ast = { path = "../shacl_ast", version = "0.1.0", features = ["rdf-star"] }
dctap = { path = "../dctap", version = "0.1.0" }
shapes_converter = { path = "../shapes_converter", version = "0.1.0", features = ["rdf-star"] }
shacl_validation = { path = "../shacl_validation", version = "0.1.0" }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.21"
anyhow = "1.0"
thiserror = "1.0"
void = "1"
clap = { version = "4.2.1", features = ["derive"] }
oxrdf = "0.2.0-alpha.2"
oxiri = "0.2.3-alpha.1"
regex = "^1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
supports-color = "3.0.0"
