[package]
name = "rudof_cli"
version = "0.1.118"
authors.workspace = true
description.workspace = true
documentation = "https://rudof-project.github.io/rudof"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
path = "src/main.rs"
name = "rudof"

[dependencies]
anyhow.workspace = true 
clap.workspace = true 
clientele.workspace = true 
data_generator = { path = "../data_generator" }
dctap.workspace = true 
iri_s.workspace = true 
oxrdf.workspace = true 
prefixmap.workspace = true 
regex.workspace = true
rdf_config.workspace = true 
rudof_lib.workspace = true 
serde.workspace = true
serde_json.workspace = true 
shacl_validation.workspace = true 
shapes_comparator.workspace = true 
shapes_converter.workspace = true 
shacl_ast.workspace = true 
shex_ast.workspace = true 
sparql_service.workspace = true 
srdf.workspace = true 
supports-color.workspace = true 
thiserror.workspace = true 
tokio.workspace = true 
tracing.workspace = true 
tracing-subscriber.workspace = true 
url.workspace = true
