[package]
name = "rudof_cli"
version = "0.1.141"
authors.workspace = true
description.workspace = true
documentation = "https://rudof-project.github.io/rudof"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
path = "src/main.rs"
name = "rudof"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clientele.workspace = true
crossterm.workspace = true
dctap.workspace = true
iri_s.workspace = true
oxrdf.workspace = true
prefixmap.workspace = true
pgschema.workspace = true
rdf_config.workspace = true
regex.workspace = true
rudof_generate.workspace = true
rudof_lib.workspace = true
rudof_mcp.workspace = true
serde.workspace = true
serde_json.workspace = true
shacl_ast.workspace = true
shacl_validation.workspace = true
shapes_comparator.workspace = true
shapes_converter.workspace = true
shex_ast.workspace = true
sparql_service.workspace = true
srdf.workspace = true
supports-color.workspace = true
tabled.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
