[package]
name = "rudof_cli"
version = "0.2.1"
authors.workspace = true
description.workspace = true
documentation = "https://rudof-project.github.io/rudof"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
path = "src/main.rs"
name = "rudof"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clientele.workspace = true
dctap.workspace = true
iri_s.workspace = true
oxrdf.workspace = true
pgschema.workspace = true
prefixmap.workspace = true
rudof_rdf.workspace = true
rdf_config.workspace = true
regex.workspace = true
rudof_generate.workspace = true
rudof_lib.workspace = true
rudof_mcp.workspace = true
serde.workspace = true
serde_json.workspace = true
shacl_ast.workspace = true
shacl_validation.workspace = true
shapes_comparator.workspace = true
shapes_converter.workspace = true
shex_ast.workspace = true
sparql_service.workspace = true
supports-color.workspace = true
tabled.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

# RPM package metadata configuration
[package.metadata.generate-rpm]
# Package assets - files to include in the RPM
assets = [
    { source = "target/release/rudof", dest = "/usr/bin/rudof", mode = "755" },
    { source = "../README.md", dest = "/usr/share/doc/rudof/README.md", mode = "644", doc = true },
    { source = "../LICENSE-MIT", dest = "/usr/share/doc/rudof/LICENSE-MIT", mode = "644", doc = true },
    { source = "../LICENSE-APACHE", dest = "/usr/share/doc/rudof/LICENSE-APACHE", mode = "644", doc = true },
]
