[package]
name = "rudof_generate"
version.workspace = true
readme = "README.md"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
anyhow.workspace = true
chrono.workspace = true

# CLI and configuration
clap.workspace = true
futures.workspace = true
rudof_iri.workspace = true
oxrdf = { workspace = true, features = ["oxsdatatypes"] }
prefixmap = { workspace = true }

# Data generation and utilities
rand.workspace = true
rayon.workspace = true
regex.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
shacl.workspace = true
shex_ast.workspace = true 
rudof_rdf.workspace = true
tokio.workspace = true
thiserror.workspace = true

# Async and parallelism
toml.workspace = true

# Logging and error handling
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
regex.workspace = true
tempfile.workspace = true
