[package]
name = "rudof_lib"
version = "0.1.120"
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/rudof_lib"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
dctap.workspace = true
either.workspace = true
iri_s.workspace = true
mie.workspace = true
oxrdf = { workspace = true, features = ["oxsdatatypes"] }
prefixmap.workspace = true
rdf_config.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shacl_ast.workspace = true
shacl_ir.workspace = true
shacl_rdf.workspace = true
shacl_validation.workspace = true
shapes_comparator.workspace = true
shapes_converter.workspace = true
shex_ast.workspace = true
shex_validation.workspace = true
spargebra.workspace = true
sparql_service.workspace = true
srdf.workspace = true
thiserror = "2.0"
toml = "0.8"
tracing.workspace = true
url.workspace = true
