[package]
name = "rudof_lib"
version = "0.1.148"
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/rudof_lib"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include = [
    "Cargo.toml",
    "src/**/*.rs",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "src/default_config.toml",
]


[dependencies]
anyhow = { workspace = true }
clap.workspace = true
dctap.workspace = true
either.workspace = true
iri_s.workspace = true
mie.workspace = true
oxrdf = { workspace = true, features = ["oxsdatatypes"] }
prefixmap.workspace = true
rdf_config.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shacl_ast.workspace = true
shacl_ir.workspace = true
shacl_rdf.workspace = true
shacl_validation.workspace = true
shapes_comparator.workspace = true
shapes_converter.workspace = true
shex_ast.workspace = true
shex_validation.workspace = true
spargebra.workspace = true
sparql_service.workspace = true
rudof_rdf.workspace = true
termtree.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
crossterm.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
clientele = { version = "0.3.8", features = [  ], default-features = false }
