[package]
name = "rudof_lib_refactored"
version = "0.2.7"
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/rudof_lib"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include = [
    "src/**/*.rs",
    "src/default_config.toml",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
dctap.workspace = true
either.workspace = true
oxrdf = { workspace = true, features = ["oxsdatatypes"] }
iri_s.workspace = true
prefixmap.workspace = true
pgschema.workspace = true
rdf_config.workspace = true
reqwest.workspace = true
rudof_generate.workspace = true
rudof_rdf.workspace = true
serde.workspace = true
serde_json.workspace = true
shacl_ast.workspace = true
shacl_ir.workspace = true
shacl_rdf.workspace = true
shacl_validation.workspace = true
shapes_comparator.workspace = true
shapes_converter.workspace = true
shex_ast.workspace = true
shex_validation.workspace = true
sparql_service.workspace = true
termtree.workspace = true
thiserror.workspace = true
toml.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
crossterm.workspace = true
url.workspace = true