[package]
name = "rudof_mcp"
version = "0.1.143"
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/shex_ast"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-server.workspace = true
base64.workspace = true
clap.workspace = true
clientele.workspace = true
iri_s.workspace = true
josekit.workspace = true
prefixmap.workspace = true
reqwest.workspace = true
rmcp = { version = "0.8.5", features = [
    "client",
    "server",
    "transport-io",
    "transport-streamable-http-server",
] }
rmcp-macros = "0.8.5"
rudof_lib.workspace = true
schemars = "1.0.4"
serde.workspace = true
serde_json.workspace = true
shex_ast.workspace = true
srdf.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
