[package]
name = "rudof_mcp"
version = "0.2.5"
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/rudof_mcp"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-server.workspace = true
base64.workspace = true
clap.workspace = true
ipnetwork.workspace = true
iri_s.workspace = true
rmcp.workspace = true
rudof_lib.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
shex_ast.workspace = true
rudof_rdf.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true, features = [] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tracing-test.workspace = true
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile.workspace = true
