[package]
name = 'shacl'
version = "0.2.9"
readme = "README.md"
authors.workspace = true
description = "A SHACL validator for RDF data, implemented in Rust."
documentation = "https://docs.rs/shacl"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["sparql"]
sparql = ["sparql_service/sparql", "rudof_rdf/sparql" ]

[dependencies]
anyhow.workspace = true
indoc.workspace = true
itertools.workspace = true
rudof_iri.workspace = true
petgraph.workspace = true
prefixmap.workspace = true
rudof_rdf.workspace = true
serde.workspace = true
sparql_service.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
oxrdf = { workspace = true, features = [ "oxsdatatypes" ] }
