[package]
name = "shacl_ast"
version = "0.1.135"
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/shacl_ast"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

#[features]
#rdf-star = [
# "oxrdf/rdf-star", 
#    "srdf/rdf-star",
#]

[dependencies]
const_format.workspace = true
iri_s.workspace = true
itertools = "0.14"
oxrdf = { workspace = true, features = ["oxsdatatypes"] }
paste.workspace = true
prefixmap.workspace = true
regex.workspace = true
srdf.workspace = true
thiserror = "2.0"
