[package]
name = "shacl_ir"
version = "0.1.120"
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/shacl_ir"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

#[features]
#rdf-star = [
#    "srdf/rdf-star",
#]

[dependencies]
iri_s.workspace = true
itertools.workspace = true
oxrdf = { workspace = true, features = ["oxsdatatypes"] }
prefixmap.workspace = true
regex.workspace = true
shacl_ast.workspace = true
shacl_rdf.workspace = true
srdf.workspace = true
thiserror.workspace = true
