[package]
name = "shacl_rdf"
version = "0.1.70"
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/shacl_rdf"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
rdf-star = [
    # "oxrdf/rdf-star", 
    "srdf/rdf-star",
]

[dependencies]
srdf.workspace = true
iri_s.workspace = true
shacl_ast.workspace = true
prefixmap.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
const_format.workspace = true
itertools.workspace = true
regex.workspace = true
oxrdf = { workspace = true, features = ["oxsdatatypes"] }
