[package]
name = "shacl_testsuite"
version = "0.1.5"
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
srdf = { path = "../srdf", version = "0.1.0" }
shacl_ast = { path = "../shacl_ast", version = "0.1.0" }
shacl_validation = { path = "../shacl_validation", version = "0.1.0" }
iri_s = { path = "../iri_s", version = "0.1.5" }
prefixmap = { path = "../prefixmap", version = "0.1.0" }

thiserror = "1.0.63"
clap = { version = "4.2.1", features = ["derive"] }
const_format = "0.2"

oxrdf = "0.2.0-alpha.2"
oxiri = "0.2.3-alpha.1"
