[package]
name = "shacl_testsuite"
version = "0.1.36"
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
srdf = { workspace = true }
shacl_ast = { workspace = true }
shacl_validation = { workspace = true }
sparql_service = { workspace = true }
iri_s = { workspace = true }
prefixmap = { workspace = true }

thiserror = "1.0.63"
clap = { workspace = true }
const_format = "0.2"

oxrdf = { workspace = true }
oxiri = "0.2.3-alpha.1"
