[package]
name = "shacl_validation"
version = "0.1.143"
readme = "README.md"
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[features]
default = ["network"]
network = ["sparql_service/network", "rudof_rdf/network"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
const_format.workspace = true
indoc.workspace = true
iri_s.workspace = true
prefixmap.workspace = true
serde.workspace = true
shacl_ast.workspace = true
shacl_ir.workspace = true
shacl_rdf.workspace = true
sparql_service = { version = "0.1.147", path = "../sparql_service", default-features = false }
rudof_rdf = { version = "0.1.147", path = "../rudof_rdf", default-features = false }
tabled.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing = { workspace = true }
tracing-subscriber.workspace = true

[dev-dependencies]
oxrdf.workspace = true
tracing-test = "0.2.5"
