[package]
name = "shapemap"
version = "0.1.86"
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/shapemap"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
colored.workspace = true
iri_s.workspace = true
prefixmap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
shex_ast.workspace = true
srdf.workspace = true
thiserror.workspace = true
